学习 webpack chunk

--- a/src/themes/green.less
+++ b/src/themes/green.less
@@ -1,6 +1,9 @@
+@main-color:#08ff70;
+@main-act-color:#e6941a;
+@text-color:white;
+
 .demo-home-root{
     background-color: @main-color;
-    border:5px solid @demo-home-border-color;
     color: @text-color;
     &:hover{
         background-color: @main-act-color;
