学习 webpack chunk

--- a/src/themes/blue.less
+++ b/src/themes/blue.less
@@ -3,7 +3,7 @@
 @main-act-color:#e3e61a;
 @text-color:white;
 
-.demo-home-root{
+.home-title{
     background-color: @main-color;
     color: @text-color;
     &:hover{
