--- a/src/themes/green.less
+++ b/src/themes/green.less
@@ -2,7 +2,7 @@
 @main-act-color:#e6941a;
 @text-color:white;
 
-.demo-home-root{
+.home-title{
     background-color: @main-color;
     color: @text-color;
     &:hover{
